fixing footer and header issues on small screens

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -3,7 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1.8rem;
 }
 
 
