--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -25,11 +25,15 @@ footer ul li a {
 footer p {
     color: #fff;
     text-align: center;
+    margin-top: 1.3rem;
 }
 
-@media screen and (min-width:480px){
+
+
+
+@media screen and (min-width:360px){
    footer{
-        padding: 0.9rem .25rem;
+        padding: 0.9rem 1.9rem;
     }
     footer ul {
         flex-direction: column;
@@ -37,11 +41,25 @@ footer p {
     footer ul li {
         padding: .7rem 0;
     }
+
+    
 }
+
+@media screen and (min-width:480px){
+    footer{
+        padding: 0.9rem 1.8rem;
+     }
+     footer ul {
+         flex-direction: column;
+     }
+     footer ul li {
+         padding: .7rem 0;
+     }
+ }
 
 @media screen and (min-width:600px){
    footer{
-        padding: 0.9rem 1.9rem;
-    }
+    padding: 0.9rem 1.8rem;
+}
     
 }
