--- a/src/components/Movies/movies.css
+++ b/src/components/Movies/movies.css
@@ -31,7 +31,7 @@
     }
 }
 
-@media screen and (min-width:620px){
+@media screen and (min-width:600px){
     .movies{
         grid-template-columns: repeat(2,1fr);
     }
