--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -70,7 +70,7 @@ nav {
         width: 200px;
         height: 100vh;
         padding: 3rem 1rem;
-        transition: right 0.3s ease;
+        transition: right 5s ease;
         overflow: hidden;
     }
     
